<resources>
    <string name="app_name">GroceryListApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="popup_title">Enter Grocery Item</string>
    <string name="item_name_hint">Item Name</string>
    <string name="item_Qty_hint">quantity</string>
    <string name="btn_save_item">Save</string>
    <string name="grocery_list_empty">Add the first Grocery Item</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="confirm_delete_text">Are you sure?</string>
    <string name="cancel_delete_text">No</string>
    <string name="affirm_delete_text">Yes</string>
</resources>
