<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/popupTitleID"
                android:text="@string/popup_title"
                android:textSize="20dp"
                android:textStyle="italic"
                />
            <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemNameID"
                android:hint="@string/item_name_hint"
                android:layout_below="@id/popupTitleID" />

            <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemQtyID"
                android:hint="@string/item_Qty_hint"
                android:layout_below="@id/itemNameID" />

            <Button
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSaveItem"
                android:text="@string/btn_save_item"
                android:layout_below="@id/itemQtyID"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>