<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlertID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="40dp"
                android:padding="8dp"
                android:text="@string/confirm_delete_text"
                android:textSize="14dp" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAlertID"
                android:layout_alignParentRight="true"
                android:layout_marginTop="18dp"
                android:layout_marginRight="45dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/cancel_delete_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAlertID"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/affirm_delete_text"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>